@@ -1,3 +1,10 @@
+Fri Jun 21 21:29:49 2013  Masaya Tarui  <tarui@ruby-lang.org>
+
+	* gc.c (typedef enum): Introdule flags of major gc reason.
+	* gc.c (garbage_collect_body): Ditto.
+	* gc.c (gc_profile_flags): Ditto.
+	* gc.c (gc_profile_dump_on): Ditto.
+
 Fri Jun 21 21:11:53 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (allocate_sorted_heaps): remove unused variable `add'.
